# PSPrompter

./: .gitignore  README.md  promptfooconfig.yaml  pyproject.toml  requirements.txt
PSPrompter/: __init__.py
PSPrompter/prompter/: __init__.py
PSPrompter/prompter/d_classes/: __init__.py
promptfoo_vars/: text.txt
prompts/: long_summary.md
psprompter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_prompter.py
