[project]
name = "psprompter"
version = "0.0.1"
description = "This is a library created to improve prompting"
authors = [
    { name = "PS - Adrian Bayona", email = "adrian.b@thepolysight.com" }
]
readme = "README.md"
requires-python = ">=3.14.0"

dependencies = [
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]